images,table,lists

--- a/V005/index.html
+++ b/V005/index.html
@@ -6,13 +6,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/jpg" href="logo\fevicon_vs.png">
     <link rel="stylesheet" href="style.css">
-    <title>Basic code</title>
+    <title>images, tables and lists</title>
 </head>
 
 <body>
-    <h1>heading can be formed in range 1-6</h1>
-    <p>Use lorem10 to print 10 random lorem words</p>
-    <p><a href="https://en.wikipedia.org/wiki/Lorem_ipsum">Lorem</a> ipsum dolor sit amet, consectetur adipisicing elit. Optio, laboriosam!</p>
+    <img src="images/dounut.jpg" alt="a dounut" width="300px">
+
+    <table>
+        <thead>
+            <tr>
+                <td colspan="2" id="theadd">Data Column1</td>
+                <td colspan="2" id="theadd">Data Column2</td>
+            </tr>
+        </thead>
+        <tr>
+            <td colspan="2">1Data</td>
+            <td>3Data</td>
+        </tr>
+        <tr>
+            <td>1Data</td>
+            <td>2Data</td>
+            <td rowspan="2">3Data</td>
+        </tr>
+        <tr>
+            <td>1Data</td>
+            <td>2Data</td>
+        </tr>
+    </table>
+
+    <ul class="listss">
+        <li>item1</li>
+        <li>item2</li>
+        <li>item3</li>
+    </ul>
+    <ol class="listss">
+        <li>item1</li>
+        <li>item2</li>
+        <li>item3</li>
+    </ol>
+    <dl class="listss">
+        <dt>item1</dt>
+            <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, fuga. Distinctio numquam ab aspernatur cumque dolore ad non veritatis delectus dignissimos obcaecati soluta, quaerat, beatae, commodi atque enim quo? Veniam iusto nobis ab quos quae aut tempore veritatis rerum numquam aspernatur, recusandae fugit quidem corporis laudantium similique assumenda voluptatum ullam.</dd>
+        <dt>item2</dt>
+            <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, fuga. Distinctio numquam ab aspernatur cumque dolore ad non veritatis delectus dignissimos obcaecati soluta, quaerat, beatae, commodi atque enim quo? Veniam iusto nobis ab quos quae aut tempore veritatis rerum numquam aspernatur, recusandae fugit quidem corporis laudantium similique assumenda voluptatum ullam.</dd>
+        <dt>item3</dt>
+            <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, fuga. Distinctio numquam ab aspernatur cumque dolore ad non veritatis delectus dignissimos obcaecati soluta, quaerat, beatae, commodi atque enim quo? Veniam iusto nobis ab quos quae aut tempore veritatis rerum numquam aspernatur, recusandae fugit quidem corporis laudantium similique assumenda voluptatum ullam.</dd>
+    </dl>
 
 </body>
 
