--- a/V004/index.html
+++ b/V004/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/jpg" href="logo\fevicon_vs.png">
     <link rel="stylesheet" href="style.css">
-    <title>Basic code</title>
+    <title>heading, paragraphs and anchor tags</title>
 </head>
 
 <body>
