--- a/V006/index.html
+++ b/V006/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/jpg" href="logo\fevicon_vs.png">
+    <meta name="description" content="A meta explanatory web page">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Meta</title>
 </head>
+
 <body>
-    
+    <h1>Meta</h1>
+    <p>Meta description used</p>
+    <p>using meta:desc</p>
 </body>
+
 </html>
