--- a/V008/index.html
+++ b/V008/index.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/jpg" href="logo\fevicon_vs.png">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>inline and bloc element</title>
 </head>
 <body>
-    
+    <h1>Inline and block element(h1 is a block element)</h1>
+    <a href="#">block element</a>
+
+    <div>div is a block element</div>
+    <span>span is an inline</span>
+    <a href="#">element</a>
 </body>
 </html>
