--- a/V009/index.html
+++ b/V009/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/jpg" href="logo\fevicon_vs.png">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>IDs and Classes</title>
 </head>
 <body>
-    
+    <h1 id="heading" class="bg-color">IDs and Classes</h1>
+    <p class="bg-color fontt">Multiple classes can be applied with space</p>
+
+    <p>Linking Id of different websites can also be possible by inspecting the id of the respective heading and placing it with a '#' beside the original link</p>
 </body>
 </html>
