--- a/V011/index.html
+++ b/V011/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/jpg" href="/assets/logo/fevicon_vs.png">
     <link rel="stylesheet" href="style.css">
-    <title>Media</title>
+    <title>Document</title>
 </head>
 <body>
-    <img src="/assets/images/dounut.jpg" alt="ss" width="300px">
-    <video src="/assets/videos/PathyGraple1.mp4" width="533px" controls></video>
+    
 </body>
 </html>
