--- a/V010/index.html
+++ b/V010/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/jpg" href="/assets/logo/fevicon_vs.png">
+    <link rel="icon" type="image/jpg" href="/assets/icons/fevicon_vs.png">
     <link rel="stylesheet" href="style.css">
     <title>Media</title>
 </head>
+
 <body>
     <img src="/assets/images/dounut.jpg" alt="ss" width="300px">
-    <video src="/assets/videos/PathyGraple1.mp4" width="533px" controls></video>
+    <video src="/assets/videos/PathyGraple1.mp4" width="533px" controls loop poster="/assets/images/dounut.jpg"></video>
 </body>
+
 </html>
