--- a/V010/index.html
+++ b/V010/index.html
@@ -10,8 +10,15 @@
 </head>
 
 <body>
-    <img src="/assets/images/dounut.jpg" alt="ss" width="300px">
-    <video src="/assets/videos/PathyGraple1.mp4" width="533px" controls loop poster="/assets/images/dounut.jpg"></video>
+    <div>
+        <img src="/assets/images/dounut.jpg" alt="ss" width="300px">
+        <video src="/assets/videos/PathyGraple1.mp4" width="533px" poster="/assets/images/dounut.jpg" controls loop></video>
+        <audio src="/assets/audios/Vine boom sound effect.mp3" controls loop></audio>
+    </div>
+    <div>
+        <iframe src="https://en.wikipedia.org/wiki/HTML" width="500" height="700"></iframe>
+        <iframe width="885" height="498" src="https://www.youtube.com/embed/qg8MQVH1TYA" title="🎶 Haaland for the Win (Haaland Song Lyrics Video ) 🎶 Clash of Clans Official" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
 </body>
 
 </html>
