--- a/V011/index.html
+++ b/V011/index.html
@@ -3,11 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/jpg" href="/assets/logo/fevicon_vs.png">
+    <link rel="icon" type="image/jpg" href="/assets/icons/fevicon_vs.png">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Semantic Tags</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h1>Main Body</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ullam veritatis voluptas voluptatum quis commodi, dicta fugit id neque nam iusto aperiam, modi facilis nesciunt hic debitis repellendus veniam magnam!
+        </p>
+        
+    </main>
+
+    <footer>
+        Copyright &copy | All rights reserved
+    </footer>
 </body>
 </html>
