--- a/V015/index.html
+++ b/V015/index.html
@@ -5,9 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/jpg" href="/assets/logo/fevicon_vs.png">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>CSS basics</title>
+    <style>
+        .internal h1{
+            color: brown;
+        }
+    </style>
 </head>
 <body>
-    
+    <div>
+        <p style="color: white; background-color: chocolate;">Inline CSS</p>
+    </div>
+    <div class="internal">
+        <h1>
+            Internal CSS
+        </h1>
+    </div>
+    <div>
+        <h2>
+            Exteranl CSS
+        </h2>
+    </div>
 </body>
 </html>
