--- a/V017/index.html
+++ b/V017/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/jpg" href="/assets/logo/fevicon_vs.png">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>CSS selectors</title>
 </head>
+
 <body>
-    
+    <header>
+        <h1 id="red">Heading of Color id</h1>
+        <p>para of heading</p>
+    </header>
+    <div>
+        <article>
+            <p class="green">This is div>article>p</p>
+        </article>
+        <p class="green">para of color class</p>
+    </div>
+    <div>
+        <a href="https://www.google.com">Go to Google</a>
+        <a href="https://www.youtube.com">Go to YouTube</a>
+    </div>
 </body>
+
 </html>
