--- a/V018 CSS Box model/index.html
+++ b/V018 CSS Box model/index.html
@@ -8,6 +8,8 @@
     <title>Box model</title>
 </head>
 <body>
-    
+    <div class="box box1">A text with a solid border</div>
+    <div class="box box2">A text with a inset border</div>
+    <div class="box box3">A text with a outset border</div>
 </body>
 </html>
