--- a/V019 Fonts/index.html
+++ b/V019 Fonts/index.html
@@ -17,7 +17,7 @@
 <body>
     <h1>heading heading</h1>
     <p class="p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ipsam.</p>
-    <p class="p2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ipsam.</p>
+    <p class="p2">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 </body>
 
 </html>
