--- a/V021 CSS Specificity/index.html
+++ b/V021 CSS Specificity/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,10 @@
     <link rel="stylesheet" href="style.css">
     <title>CSS Specificity & Cascade</title>
 </head>
+
 <body>
-    
+    <h1 class="cl1 cl2 cl3" id="clid">Color</h1>
+    <h1 style="color: crimson;">Color</h1>
 </body>
+
 </html>
